--- a/examples/spark-pi.yaml
+++ b/examples/spark-pi.yaml
@@ -17,7 +17,7 @@ apiVersion: sparkoperator.k8s.io/v1beta2
 kind: SparkApplication
 metadata:
   name: spark-pi
-  namespace: default
+  namespace: ingestion-pipeline
 spec:
   type: Scala
   mode: cluster
