Set jobNamespaces to ingestion-pipeline and reverse-pipeline

--- a/charts/spark-operator-chart/values.yaml
+++ b/charts/spark-operator-chart/values.yaml
@@ -349,7 +349,8 @@ spark:
   # If empty string is included, all namespaces will be allowed.
   # Make sure the namespaces have already existed.
   jobNamespaces:
-  - default
+  - ingestion-pipeline
+  - reverse-pipeline
 
   serviceAccount:
     # -- Specifies whether to create a service account for spark applications.
